--- a/PC/CS_UrRobot/CS_UrRobot.csproj
+++ b/PC/CS_UrRobot/CS_UrRobot.csproj
@@ -39,6 +39,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="URCoordinates.cs" />
     <Compile Include="UrSocketControl.cs" />
   </ItemGroup>
